--- a/src/assests/Results.css
+++ b/src/assests/Results.css
@@ -31,3 +31,11 @@
     padding-top: 45%;
     font-size: 2rem;
 }
+
+.Results_List {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 600px;
+    margin: 20px auto;
+}
