--- a/src/assests/Results.css
+++ b/src/assests/Results.css
@@ -21,21 +21,12 @@
     margin-top: 0vh;
 }
 
-.Results_List textarea{
-    width: 60vh;
-    height: 60vh;
-}
-
-.Results_List textarea::placeholder {
-    text-align: center;
-    padding-top: 45%;
-    font-size: 2rem;
-}
-
 .Results_List {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     max-width: 600px;
     margin: 20px auto;
+    width: 50vh;
+    height: 55vh
 }
