--- a/src/assests/Map.css
+++ b/src/assests/Map.css
@@ -12,6 +12,7 @@
     width: 15vh;
     height: 5vh;
     margin-left: 5vh;
+    margin-top: 2.5vh;
     font-size: 1rem;
     text-align: center;
 }
